Add getting tenant with details
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>